--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -22,25 +22,18 @@ body {
   margin: 0;
   font-family: sans-serif;
 }
-
-.container {
-  width: 100%;
+.intro{
   background: #23424a;
   color: white;
-  padding: 50px 0;
+  padding: 50px 0;  
 }
 
-.intro-content, 
-.content{
+.container {
   width: 80%;
   max-width: 750px;
   margin: 0 auto;
 }
+
 .intro-content{
-  h1,p{
-    width: 50%;
-  }
-}
-main{
-  width: 100%;
+  width: 50%;
 }
