--- a/challenge03/style.css
+++ b/challenge03/style.css
@@ -1,8 +1,43 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;1,100&display=swap');
+
+:root{
+    --color_one: #23424A;
+}
+*{
     box-sizing: border-box;
   }
   
   body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: Roboto;
+    padding: 0;
+  }
+
+  .header{
+    background-color: var(--color_one);
+    color: #FFFFFF;
+    padding: 40px 0 80px 0;
+  }
+  .container{
+    width: 50%;
+    max-width: 750px;
+    margin: auto 100px;
+  }
+  .hero{
+    font-size: 1.3rem;
+    h1{
+        font-size: 2.8rem;
+    }
+   
+    button{
+        padding: 15px 30px 15px 30px;
+        border-radius: 30px;
+        background-color:#38CFD9;
+        margin-top: 20px;
+        text-decoration: none;
+        color: var(--color_one);
+        font-size: 1.2rem;
+        font-weight: 600;
+        border: none;    
+    }
   }
