--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -77,6 +77,11 @@ header {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: flex;
+    align-items: baseline;
+}
+.nav__item{
+    padding: 10px;
 }
 
 .nav__link {
