--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -78,10 +78,10 @@ header {
     padding: 0;
     list-style: none;
     display: flex;
-    align-items: baseline;
 }
 .nav__item{
-    margin-right: 1em;
+    padding: 0.5em;
+ 
 }
 
 .nav__link {
