--- a/nav-challenge -toggle/style.css
+++ b/nav-challenge -toggle/style.css
@@ -209,7 +209,7 @@ header {
         visibility: visible;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-end;
         height: auto;
         position: relative;
     }
