--- a/challenge01/style.css
+++ b/challenge01/style.css
@@ -2,14 +2,14 @@
  *
  * 1) Limit the total width of
  *    the .intro-conent to about half
- *    of it's parent
+ *    of it's parent 
  *
  * 2) Stop the text from overflowing
  *    out the bottom at small screen
  *    widths
  *
  * You may modify the HTML if needed
- *
+ * This course is awesome
  */
 
 * {
