--- a/Final_Challenge/style.css
+++ b/Final_Challenge/style.css
@@ -15,4 +15,53 @@
 body{
     font-family: "Oswald", "Roboto", sans-serif;
     font-optical-sizing: auto;
+    margin: 0;
+}
+.container{
+    width: 90%;
+    margin: 0 auto;
+    
+}
+
+header{
+    background-color: var(--accent-secondary);
+    margin-top: 0;
+}
+nav{
+    background-color: var(--accent-primary);
+    margin-top: 0;
+}
+.btn{
+    background-color: var(--accent-brown);
+    color: var(--accent-text-light);
+    border: none;
+    border-radius: 20px;
+}
+
+/* Hero section starts here */
+.hero{
+    padding: 25px;
+    .btn{
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: clamp(.5rem, calc(.2rem + 5vw), 1.5rem);
+        padding: 10px;
+    }
+}
+.hero-header{
+    margin: 0;
+    text-align: center;
+    font-weight: bold;
+    color: var(--accent-text-light);
+    font-size: clamp(1rem, calc(.9rem + 5vw), 6rem);
+    span{
+        color: var(--accent-brown);
+    }
+}
+.hero-text{
+    font-family: roboto;
+    font-size: clamp(.5rem, calc(.2rem + 5vw), 1.5rem);
+    color: var(--accent-text-light);
+    width: 90%;
+    margin: 0 auto;
 }
