--- a/Final_Challenge/style.css
+++ b/Final_Challenge/style.css
@@ -20,7 +20,6 @@ body{
 .container{
     width: 90%;
     margin: 0 auto;
-    
 }
 
 header{
@@ -36,8 +35,45 @@ nav{
     color: var(--accent-text-light);
     border: none;
     border-radius: 20px;
+    font-family: "Oswald", sans-serif;
 }
-
+/* nav section starts here */
+.nav{
+    display: flex;
+    flex-direction: column;
+    font-size: clamp(.5rem, calc(.2rem + 8vw), 1.125rem);
+    color: var(--accent-text-light);
+}
+.link{
+    width: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-weight: 500;
+    li{
+        list-style: none;
+        text-align: center;
+        padding: 5px;
+        width: 100%;
+        text-transform: uppercase;
+    }
+    .btn{
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: clamp(.3rem, calc(.1rem + 5vw), 1.125rem);
+        padding: 5px;
+        width: 50%;
+        margin-bottom: 15px;
+    }
+}
+.logo{
+    width: 100%;
+    padding: 5px;
+    img{
+        width: 12%;
+       margin-top: 15px;
+    }
+}
 /* Hero section starts here */
 .hero{
     padding: 25px;
