--- a/Final_Challenge/style.css
+++ b/Final_Challenge/style.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700');
+@import url('https://fonts.googleapis.com/css2?family=Roboto');
 
 :root{
     --accent-primary: #2E323F;
     --accent-secondary: #3B4050;
     --accent-light: #6F737F;
-    --accent-text-light: #FFFFFF;
+    --accent-text-light: #ffffffc9;
     --accent-brown: #A59678;
 }
 
@@ -41,7 +42,7 @@ nav{
 .nav{
     display: flex;
     flex-direction: column;
-    font-size: clamp(.5rem, calc(.2rem + 8vw), 1.125rem);
+    font-size: clamp(.5rem, calc(.3rem + 3vw), 1.125rem);
     color: var(--accent-text-light);
 }
 .link{
@@ -60,7 +61,7 @@ nav{
     .btn{
         text-transform: uppercase;
         font-weight: 600;
-        font-size: clamp(.3rem, calc(.1rem + 5vw), 1.125rem);
+        font-size: clamp(.3rem, calc(.1rem + 4vw), 1.125rem);
         padding: 5px;
         width: 50%;
         margin-bottom: 15px;
@@ -80,8 +81,8 @@ nav{
     .btn{
         text-transform: uppercase;
         font-weight: bold;
-        font-size: clamp(.5rem, calc(.2rem + 5vw), 1.5rem);
-        padding: 10px;
+        font-size: clamp(.5rem, calc(.2rem + 3vw), 1.5rem);
+        padding: 8px;
     }
 }
 .hero-header{
@@ -89,15 +90,67 @@ nav{
     text-align: center;
     font-weight: bold;
     color: var(--accent-text-light);
-    font-size: clamp(1rem, calc(.9rem + 5vw), 6rem);
+    font-size: clamp(1rem, calc(.8rem + 4vw), 6rem);
     span{
         color: var(--accent-brown);
     }
 }
 .hero-text{
     font-family: roboto;
-    font-size: clamp(.5rem, calc(.2rem + 5vw), 1.5rem);
+    font-size: clamp(.5rem, calc(.2rem + 4vw), 1.5rem);
     color: var(--accent-text-light);
-    width: 90%;
     margin: 0 auto;
+}
+main{
+    p{
+        font-family: Roboto;
+        font-size: clamp(.3rem, calc(.15rem + 4vw), 1.5rem);
+    }
+}
+.services{
+    background-color: rgba(224, 217, 217, 0.281);
+    padding: 1px 0 20px 0;
+    h2{
+        font-family: Oswald;
+        font-size: clamp(.5rem, calc(.3rem + 5vw), 1.875rem);
+        color: var(--accent-brown);
+        margin: 10px 0 10px 0;
+    }
+    p{ 
+        margin-bottom: 0PX;
+    }
+}
+
+.detail-info{
+    padding: 1px 0 20px 0;
+    h3{
+        font-size: clamp(.5rem, calc(.4rem + 5vw), 2.25rem);
+        margin: 5px 0 5px 0;
+        color: var(--accent-brown);
+    }
+    img{
+        width: 100%;
+    }
+}
+
+.sidebar{
+    padding: 1px 0 25px ;
+    color: var(--accent-text-light);
+    h3{
+        font-size: clamp(.3rem, calc(.4rem + 4vw), 1.875rem);
+        margin: 5px 0 5px 0;
+    }
+    article{
+        background-color: var(--accent-secondary);
+        text-align: center;
+        padding: 10px;
+        margin-top: 15px;
+        p{
+            padding: 0 10px;
+        }
+    }
+}
+footer{
+    background-color: var(--accent-secondary); 
+    padding: 10px;
 }
